--- a/index.ipynb
+++ b/index.ipynb
@@ -196,7 +196,7 @@
    },
    "outputs": [],
    "source": [
-    "\"art vandelay\" # 'Art Vandelay'"
+    "\"art vandelay\".tit # 'Art Vandelay'"
    ]
   },
   {
