Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -260,7 +260,7 @@
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\".endswhith() # False"
+    "\"art.vandelay@vandelay.co\".ends() # False"
    ]
   },
   {
